Makes message/flash queue more discrete by allowing only one type of message to be displayed, fixes flushqueue to no leave any empty message name in the queue, moves the expFramework show_message_queue code into the expQueue subsystem as show method, changes form module default view to only display 'notices' and leave remaining messages in queue.  Increases contrast on 'notice' message display and adds a new blue 'info' message type. [#433 state:resolved milestone:2.0.3]

--- a/framework/core/assets/css/msgq.css
+++ b/framework/core/assets/css/msgq.css
@@ -27,8 +27,14 @@ div.msg-queue.error {
 
 div.msg-queue.notice {
     background: #f1e778;
-    border: 2px solid #c59207;
-    color: #c59207;
+    border: 2px solid #c27b12;
+    color: #c27b12;
+}
+
+div.msg-queue.info {
+    background: #c2f0f0;
+    border: 2px solid #1a18c4;
+    color: #1a18c4;
 }
 
 .msg-queue {
